@@ -1,0 +1,5 @@
+try:
+  set()
+  set = set
+except:
+  from sets import Set as set
